--- a/client/app/common/navigation.tpl.html
+++ b/client/app/common/navigation.tpl.html
@@ -27,6 +27,9 @@
                         <li ui-sref-active="active" >
                             <a ui-sref="index.home"><i class="fa fa-home"></i> <span class="nav-label">Home</span></a>
                         </li>
+                        <li ui-sref-active="active" >
+                            <a ui-sref="provider.list"><i class="fa fa-user-md"></i> <span class="nav-label">Provider</span></a>
+                        </li>
 
                         <li ng-class="{active: $state.includes('patient')}" ng-show="showHealthInformationMenu" ng-click="routeToHealthInformation()">
                             <a href=""><i class="fa fa-stethoscope"></i> <span class="nav-label"> Health Information</span> <span class="fa arrow"></span></a>
