--- a/client/app/provider/tmpl/provider-list.tpl.html
+++ b/client/app/provider/tmpl/provider-list.tpl.html
@@ -1,4 +1,3 @@
-
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-sm-10">
         <h1>Provider List</h1>
@@ -19,6 +18,57 @@
                 </p>
             </div>
         </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Current Healthcare Providers</h5>
+
+                    <div ibox-tools></div>
+                </div>
+                <div class="ibox-content">
+
+                    <table class="table table-bordered table-striped table-hover">
+                        <thead>
+                        <tr>
+                            <th></th>
+                            <th>Name/Facility</th>
+                            <th>Specialty</th>
+                            <th>NPI</th>
+                            <td>Contact Number</td>
+                            <td>Address</td>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td><button type="button" class="btn btn-danger btn-xs">
+															<span class="fa fa-minus fa-white"></span>
+														</button></td>
+                            <td>Washington, George</td>
+                            <td>Clinical</td>
+                            <td>1234567890</td>
+                            <td>(123) 456-7890</td>
+                            <td>123 Main Street, Anytown, MD 12345</td>
+                        </tr>
+                        <tr>
+                            <td><button type="button" class="btn btn-default btn-xs" disabled="disabled">
+                                <span class="fa fa-minus fa-white"></span>
+                            </button></td>
+                            <td>Jacob</td>
+                            <td>Thornton</td>
+                            <td>@fat</td>
+                            <td>@mdo</td>
+                            <td>@mdo</td>
+                        </tr>
+
+                        </tbody>
+                    </table>
+
+                </div>
+            </div>
+        </div>
+
     </div>
 
 </div>
