Edit code. Change <td> to <th>
#7057 - Create manage providers UI that interfaces with Patient Consent Management API

--- a/client/app/provider/tmpl/provider-list.tpl.html
+++ b/client/app/provider/tmpl/provider-list.tpl.html
@@ -36,8 +36,8 @@
                             <th>Name/Facility</th>
                             <th>Specialty</th>
                             <th>NPI</th>
-                            <td>Contact Number</td>
-                            <td>Address</td>
+                            <th>Contact Number</th>
+                            <th>Address</th>
                         </tr>
                         </thead>
                         <tbody>
