--- a/client/app/provider/tmpl/provider-list.tpl.html
+++ b/client/app/provider/tmpl/provider-list.tpl.html
@@ -43,7 +43,7 @@
                         <tbody>
                             <tr ng-repeat="provider in providers">
                                 <td>
-                                    <button type="button" class="btn btn-xs" ng-class="{ 'btn-danger' : provider.activeConsent, 'btn-default': provider.activeConsent} ">
+                                    <button type="button" class="btn btn-xs" ng-class="{ 'btn-danger' : !provider.activeConsent, 'btn-default': provider.activeConsent} " ng-disabled="provider.activeConsent" ng-click="openDeleteProviderModal('sm')">
                                         <span class="fa fa-minus fa-white"></span>
                                     </button>
                                 </td>
