Add ui-router as a bower dependency, make footer, top navbar and left navbar as directives
#7057 - Create manage providers UI that interfaces with Patient Consent Management API

--- a/client/common/tmpl/content.tpl.html
+++ b/client/common/tmpl/content.tpl.html
@@ -2,21 +2,37 @@
 <div id="wrapper" >
     <div class="container-fluid left-right-padding-0">
         <!-- Navigation -->
-        <div ng-include="'common/tmpl/navigation.tpl.html'"></div>
+        <!--<div ng-include="'common/tmpl/navigation.tpl.html'"></div>-->
+
+        <app-left-navigation
+                authentication="authentication"
+                logout="logOut()"
+                routetohealthinformation="routeToHealthInformation()"
+                scrolltoandexpand="scrollToAndExpand(target,expand)"
+                showhealthinformationmenu="showHealthInformationMenu"
+                hidesection="hideSection"
+                toggledemographics="toggleDemographics"
+                togglemedications="toggleMedications"
+                togglealerts="toggleAlerts"
+                toggleresults="toggleResults"
+                toggleencounters="toggleEncounters"
+                toggleproblems="toggleProblems"
+                togglevitalSigns="toggleVitalSigns"
+                toggleprocedure="toggleProcedure" ></app-left-navigation>
 
         <!-- Page wraper -->
         <!-- ng-class with current state name give you the ability to extended customization your view -->
         <div id="page-wrapper" class="bg-white-page {{$state.current.name}}">
 
             <!-- Page wrapper -->
-            <div ng-include="'common/tmpl/topnavbar.tpl.html'"></div>
+            <app-top-navbar togglesidebar="toggleSideBar()" authentication="authentication" togglebar="togglebar" logout="logOut()"></app-top-navbar>
 
             <!-- Main view  -->
             <!-- padding-top-60 ensure the content don't scroll under the top-navbar-->
             <div ui-view class="padding-top-60"></div>
 
             <!-- Footer -->
-            <div ng-include="'common/tmpl/footer.tpl.html'"></div>
+            <app-footer></app-footer>
 
         </div>
         <!-- End page wrapper-->
