--- a/client/common/tmpl/topnavbar.tpl.html
+++ b/client/common/tmpl/topnavbar.tpl.html
@@ -4,12 +4,7 @@
         <div class="row ">
             <div class="col-sm-12">
                 <div class="navbar-header">
-                    <span minimaliza-sidebar togglesidebar="toggleSideBar()"></span>
-                    <form role="search" class="navbar-form-custom" method="post" action="views/search_results.html">
-                        <div class="form-group">
-                            <!--<input type="text" placeholder="{{ 'SEARCH' | translate }}" class="form-control" name="top-search" id="top-search">-->
-                        </div>
-                    </form>
+                    <span minimaliza-sidebar togglesidebar="togglesidebar()"></span>
                 </div>
                 <div class="pull-right">
                     <div class="navbar-brand top-padding10">
@@ -23,7 +18,7 @@
                     </span>
                     </li>
                     <li>
-                        <a class="dark-grey" href="" ng-click="logOut()">
+                        <a class="dark-grey" href="" ng-click="logout()">
                             <i class="fa fa-sign-out"></i> Log out
                         </a>
                     </li>
