--- a/client/app/provider/tmpl/provider-lookup.tpl.html
+++ b/client/app/provider/tmpl/provider-lookup.tpl.html
@@ -1,4 +1,3 @@
-
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-sm-10">
         <h1>Provider Lookup</h1>
@@ -9,10 +8,146 @@
 
 <div class="wrapper wrapper-content animated fadeInRight">
     <div class="row">
-        <div class="col-sm-12">
+        <div class="col-sm-12" id="demographics">
+            <div class="ibox panel panel-darkblue float-e-margins">
+                <div class="ibox-title  modified panel-heading">
+                    <h2>Search by: Provider location</h2>
 
+                    <div ibox-tools></div>
+                </div>
+                <div class="ibox-content modified">
+                    <form role="form">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <div class="alert alert-info">
+                                    <span class="btn btn-success btn-circle">1</span>&nbsp;<b>Step 1.</b> Please enter
+                                    the
+                                    provider <b>State and City</b> OR <b>Zip Code</b>.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-5">
+                                <h3 class="m-t-none m-b">Enter State and City.</h3>
 
+                                <div class="form-group">
+                                    <label for="state" class="control-label">State</label>
+                                    <select id="state" class="form-control m-b" name="account">
+                                        <option>-- Please Select --</option>
+                                        <option>Alabama</option>
+                                        <option>Alaska</option>
+                                        <option>Arizona</option>
+                                        <option>Arkansas</option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label">City</label>
+                                    <Input class="form-control m-b" type="text" placeholder="Enter City"/>
+                                </div>
+                            </div>
+                            <div class="col-sm-1 m-b">
+                                <p>OR</p>
+                            </div>
+                            <div class="col-sm-5">
+                                <h3 class="m-t-none m-b">Enter Zip Code</h3>
+
+                                <div class="row">
+                                    <div class="col-sm-5 form-group">
+                                        <label class="control-label">Zip Code</label>
+                                        <Input class="form-control m-b" type="text" placeholder="Enter Zip Code"/>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <div class="alert alert-info">
+                                    <span class="btn btn-success btn-circle">2</span>&nbsp;<b>Step 2.</b> Please enter
+                                    the
+                                    <b>Facility Name</b> OR <b>Provider Name and
+                                    Other Criteria</b>.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-5">
+                                <h3 class="m-t-none m-b">Enter Provider Name and Other Critieria</h3>
+
+                                <div class="form-group">
+                                    <label class="control-label">Provider Last Name</label>
+                                    <Input class="form-control m-b" type="text" placeholder="Last Name"/>
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label">First Name (Optional)</label>
+                                    <Input class="form-control m-b" type="text" placeholder="First Name"/>
+                                </div>
+                                <div class="row">
+                                    <div class="form-group col-md-6">
+                                        <label for="gender" class="control-label">Gender</label>
+                                        <select id="gender" class="form-control m-b">
+                                            <option>Please Select</option>
+                                            <option>Male</option>
+                                            <option>Female</option>
+                                            <option>Rather not say</option>
+                                        </select>
+                                    </div>
+
+                                    <div class="form-group col-md-6">
+                                        <label class="control-label">Telephone (Optional)</label>
+                                        <Input class="form-control m-b" type="tel" placeholder="Telephone"/>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-1 m-b">
+                                <p>OR</p>
+                            </div>
+                            <div class="col-sm-5">
+
+                                <h3 class="m-t-none m-b">Facility Name</h3>
+
+                                <div class="form-group">
+                                    <label class="control-label">Facility Name</label>
+                                    <Input class="form-control m-b" type="text" placeholder="Facility Name"/>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="hr-line-dashed"></div>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <button class="btn btn-sm m-r" type="reset">Clear All</button>
+                                <button class="btn btn-sm btn-primary dark-green" type="button"><strong>Search</strong>
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <div class="panel panel-darkblue">
+                <div class="ibox-title modified panel-heading">
+                    <h2>Search Results</h2>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 col-md-offset-3">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4>SLEEP CENTER OF ALASKA &nbsp;<span>[NPI: 1234567890]</span></h4>
+                    <button type="button" class="btn btn-xs btn-primary dark-green"><i class="fa fa-plus"></i></button>
+                    &nbsp;Add this Provider.
+                </div>
+                <div class="panel-body">
+                    <p>Sleep Disorder Diagnostic</p>
+
+                    <p>123 Main Street, Anytown MD, 21212-1122</p>
+
+                    <p>(410) 123-4567</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
