--- a/client/app/provider/tmpl/provider-list.tpl.html
+++ b/client/app/provider/tmpl/provider-list.tpl.html
@@ -46,6 +46,8 @@
                                     <button type="button" class="btn btn-xs" ng-class="{ 'btn-danger' : !provider.activeConsent, 'btn-default': provider.activeConsent} " ng-disabled="provider.activeConsent" ng-click="openDeleteProviderModal('sm')">
                                         <div class="fa fa-minus">
                                              <span class="sr-only">delete provider</span>
+                                             <span class="sr-only" ng-bind="provider.lastName"></span>
+                                             <span class="sr-only" ng-bind="provider.firstName"></span>
                                         </div>
                                     </button>
                                 </td>
